# vm8086

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
resources/: p4-add.asm
source/: decoder.cpp  decoder.h  io.h  main.cpp  printer.h
src/: decoder.cpp  decoder.h  errors.h  helper.cpp  helper.h  io.cpp  io.h  main.cpp  printer.cpp  printer.h  utils.cpp  utils.h
src/instructions/: mov.cpp  mov.h
trash/: async_impl
